src/objects/Event__c.object
<CustomObject>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Looks up to the associated Campaign record.</description>
        <inlineHelpText>Looks up to the associated Campaign record.</inlineHelpText>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>The description of the scheduled event.</description>
        <inlineHelpText>The description of the scheduled event.</inlineHelpText>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>The end date for the scheduled event.</description>
        <inlineHelpText>The end date for the scheduled event.</inlineHelpText>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EventName__c</fullName>
        <description>The name of the event.</description>
        <inlineHelpText>The name of the event.</inlineHelpText>
        <label>Event Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventType__c</fullName>
        <description>The type of event schedule.</description>
        <inlineHelpText>The type of event schedule.</inlineHelpText>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Trade Show</fullName>
                    <default>true</default>
                    <label>Trade Show</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Location__c</fullName>
        <description>The location of the event.</description>
        <inlineHelpText>The location of the event.</inlineHelpText>
        <label>Event Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eventtia_Id__c</fullName>
        <description>External Id for Eventtia event record.</description>
        <externalId>true</externalId>
        <inlineHelpText>External Id for Eventtia event record.</inlineHelpText>
        <label>Eventtia Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eventtia_Link__c</fullName>
        <description>Link to associated Eventtia page.</description>
        <inlineHelpText>Link to associated Eventtia page.</inlineHelpText>
        <label>Eventtia Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingCity__c</fullName>
        <description>The event&apos;s city.</description>
        <inlineHelpText>The event&apos;s city.</inlineHelpText>
        <label>MailingCity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingCountry__c</fullName>
        <description>The event&apos;s country.</description>
        <inlineHelpText>The event&apos;s country.</inlineHelpText>
        <label>MailingCountry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MailingPostalCode__c</fullName>
        <description>The event&apos;s zipcode.</description>
        <inlineHelpText>The event&apos;s zipcode.</inlineHelpText>
        <label>MailingPostalCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingState__c</fullName>
        <description>The state where the event is taking place.</description>
        <inlineHelpText>The state where the event is taking place.</inlineHelpText>
        <label>MailingState</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingStreet__c</fullName>
        <description>The event&apos;s street location.</description>
        <inlineHelpText>The event&apos;s street location.</inlineHelpText>
        <label>MailingStreet</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Main_Point_of_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The primary point of contact for Event.</description>
        <inlineHelpText>The primary point of contact for Event.</inlineHelpText>
        <label>Main Point of Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Main_Point_of_Contacts_Company__c</fullName>
        <description>Designated ITA POC for the event.</description>
        <formula>Main_Point_of_Contact__r.CompanyName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Designated ITA POC for the event.</inlineHelpText>
        <label>Main Point of Contact&apos;s Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>The start date for the scheduled event.</description>
        <inlineHelpText>The start date for the scheduled event.</inlineHelpText>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <label>Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EventName__c</columns>
        <columns>EventType__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E-{00000000}</displayFormat>
        <label>Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>